--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -13,7 +13,8 @@ jdbc.pass=admin
 # hibernate.X
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql=false
-#hibernate.hbm2ddl.auto=create-drop
-hibernate.hbm2ddl.auto=create-drop
-hibernate.cache.use_second_level_cache=false
-hibernate.cache.use_query_cache=false
+current_session_context_class=thread
+hibernate.hbm2ddl.auto=update
+ spring.aop.proxy-target-class=true 
+
+
