--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,44 @@
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>4.0.4.RELEASE</version>
 		</dependency>
+		
+		<!-- Social -->
+		 
+       <!-- http://mvnrepository.com/artifact/org.springframework.social/spring-social-config -->
+       <dependency>
+           <groupId>org.springframework.social</groupId>
+           <artifactId>spring-social-config</artifactId>
+           <version>1.1.4.RELEASE</version>
+       </dependency>
+ 
+       <!-- http://mvnrepository.com/artifact/org.springframework.social/spring-social-core -->
+       <dependency>
+           <groupId>org.springframework.social</groupId>
+           <artifactId>spring-social-core</artifactId>
+           <version>1.1.4.RELEASE</version>
+       </dependency>
+ 
+       <!-- http://mvnrepository.com/artifact/org.springframework.social/spring-social-security -->
+       <dependency>
+           <groupId>org.springframework.social</groupId>
+           <artifactId>spring-social-security</artifactId>
+           <version>1.1.4.RELEASE</version>
+       </dependency>
+ 
+       <!-- http://mvnrepository.com/artifact/org.springframework.social/spring-social-web -->
+       <dependency>
+           <groupId>org.springframework.social</groupId>
+           <artifactId>spring-social-web</artifactId>
+           <version>1.1.4.RELEASE</version>
+       </dependency>
+ 
+       <!-- http://mvnrepository.com/artifact/org.springframework.social/spring-social-google -->
+       <dependency>
+           <groupId>org.springframework.social</groupId>
+           <artifactId>spring-social-google</artifactId>
+           <version>1.0.0.RELEASE</version>
+       </dependency>
+
 
 		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 		<dependency>
